# medians

./: CHANGELOG.md  median-of-medians.cabal
src/: MediansOfMedians.hs  MyLib.hs
test/: Main.hs
